welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:45: error: '<-' expected but integer literal found.
	for (j 1 to 4) {
               ^FlowerPot:51: error: illegal start of simple expression
}
^