welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def peindre(c : Color) {
	setCouleurBrosse(c : Color);
	baisseBrosse();
	leveBrosse();
}

def flower(c : Color) {
	peindre(c : Color);
	avance();
	peindre(Color.YELLOW);
	gauche();
	avance();
	peindre(c : Color);
	recule();
	recule();
	peindre(c : Color);
	avance();
	droite();
	avance();
	peindre(c : Color);
	recule();
	recule();
}

def growFlowers();
	flower(color.RED);
	for (i <- 1 to 4) {
		avance();
	}
	flower(color.CYAN);
	recule();
	recule();
	droite();
	avance();
	avance();
	gauche();
	flower(color.ORANGE);
	avance();
	avance();
	droite();
	avance();
	avance();
	gauche();
	flower(color.GREEN);
	for (j 1 to 4) {
		recule();
	}
	flower(color.PINK);
